# claims-wizard-v2

./: .gitignore  CLAUDE.md  README.md  run_dev.bat
backend/: pyproject.toml  settings.json
backend/app/: __init__.py  cases.py  errors.py  main.py  pipeline.py  ssot.py
backend/app/modules/: __init__.py  aggregator.py  deductions.py  holidays.py  job_scope.py  limitation.py  meal_allowance.py  pattern_translator.py  pension.py  recreation.py  salary_conversion.py  seniority.py  severance.py  summary.py  training_fund.py  travel.py  vacation.py
backend/app/utils/: __init__.py  snapshots.py  static_data.py
backend/data/: holiday_dates.csv  minimum_wage.csv  recreation_day_value.csv  recreation_days.csv
backend/data/meal_allowance/: construction.csv
backend/data/shabbat_times/: beer_sheva.csv  haifa.csv  jerusalem.csv  nof_hagalil.csv  tel_aviv.csv
backend/data/travel_allowance/: construction_base.csv  (+2 more)
backend/scripts/: generate_holiday_dates.py  generate_shabbat_times.py
backend/tests/: __init__.py  test_aggregator.py  test_api.py  test_day_snapshot.py  test_deductions.py  test_errors.py  test_holidays.py  test_job_scope.py  test_limitation.py  test_meal_allowance.py  test_ot_manual_example.py  test_ot_overlap_example.py  test_overtime_stage8_pricing.py  test_pattern_translator.py  test_pension.py  test_pipeline.py  test_pipeline_integration.py  test_recreation.py  test_salary_conversion.py  test_seniority.py  test_severance.py  test_snapshots.py  test_ssot.py  test_static_data.py  test_summary.py  test_training_fund.py  test_travel.py  test_vacation.py
(+68 files in other folders)
